syntax = "proto3";

package clicks.v1;

message ClickRequest {
  uint32 tile_id = 1;
  string country_id = 2;
}

message Ownerships {
  map<uint32, string> bindings = 1;
  // TODO: add country leaderboard
}

message TileUpdate {
  uint32 tile_id = 1;
  string country_id = 2;
}